force-app/main/default/objects/custom_create271__c/custom_create271__c.object-meta.xml
<CustomObject>
    <label>Custom created object271</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects271</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>