force-app/main/default/objects/custom_create271__c/fields/custom_create_271field512__c.field-meta.xml
<CustomField>
    <fullName>custom_create_271field512__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 271field512</label>
    <type>Checkbox</type>
</CustomField>