force-app/main/default/objects/custom_create271__c/fields/custom_create_271field513__c.field-meta.xml
<CustomField>
    <fullName>custom_create_271field513__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 271field513</label>
    <type>Checkbox</type>
</CustomField>